--- a/pom.xml
+++ b/pom.xml
@@ -24,16 +24,16 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.1</version>
             </plugin>
-            <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>jib-maven-plugin</artifactId>
-        <version>3.4.5</version>
-        <configuration>
-          <to>
-            <image>myimage</image>
-          </to>
-        </configuration>
-      </plugin>
+<plugin>
+  <groupId>com.google.cloud.tools</groupId>
+  <artifactId>jib-maven-plugin</artifactId>
+  <version>3.4.5</version>
+  <configuration>
+    <to>
+      <image>my-java-login-app:1.0.0</image>
+    </to>
+  </configuration>
+</plugin>
         </plugins>
     </build>
 </project>
